--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
   },
   "license": "MIT",
   "author": "night",
-  "description": "node >= 16",
+  "description": "node >= 16 & curr version 19.1.0",
   "main": "./src/App.ts",
   "dependencies": {
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "babel-loader": "^9.1.3",
     "body-parser": "^1.20.2",
@@ -25,8 +23,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.77.8",
-    "sass-loader": "^14.2.1",
-    "style-loader": "^4.0.0",
+    "sass-loader": "^15.0.0",
+    "style-loader": "^4.0.0",    
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
