--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
+    "antd": "^5.19.3",
     "axios": "^1.7.2",
     "babel-loader": "^9.1.3",
     "body-parser": "^1.20.2",
@@ -19,12 +20,14 @@
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "html-webpack-plugin": "^5.6.0",
+    "markdown-it": "^14.1.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "sass": "^1.77.8",
     "sass-loader": "^15.0.0",
-    "style-loader": "^4.0.0",    
+    "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
