--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bgpt",
   "scripts": {
     "start": "webpack-dev-server -c build/webpack.dev.js",
+    "watch": "npx tailwindcss -i ./src/asset/input.css -o ./public/output.css --watch",
     "build": "webpack -c build/webpack.prod.js"
   },
   "license": "MIT",
@@ -28,6 +29,7 @@
     "sass": "^1.77.8",
     "sass-loader": "^15.0.0",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.7",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
