--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bgpt",
   "scripts": {
-    "start": "pm2 start index.js && vite",
+    "start": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
