--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "night",
   "description": "node >= 16 & curr version 19.1.0",
   "main": "./src/index.js",
+  "type": "module",
   "dependencies": {
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
+    "@baiducloud/qianfan": "^0.1.7",
     "@vitejs/plugin-react": "^4.3.1",
     "antd": "^5.19.3",
     "autoprefixer": "^10.4.20",
